# bb-copilot

./: .env.example  .gitignore  Makefile  Modelfile  README.es.md  README.md  SECURITY.md  pyproject.toml
cli/: findings.py  history.py  llm.py  main.py  models.py  planner.py  reporter.py  vault.py
examples/: target-api.txt  target-web.txt
tests/: test_cli.py  test_vault.py
vault/methodology/: api-hunting.md  asset-triage.md  js-analysis.md  recon.md  reporting.md
vault/patterns/: auth-bypass.md  multi-tenant.md  race-conditions.md  role-confusion.md
vault/prompts/: rules.txt  system.txt
vault/vulns/: business-logic.md  cors.md  file-upload.md  idor.md  oauth.md  open-redirect.md  sqli.md  ssrf.md  ssti.md  subdomain-takeover.md  xss.md  xxe.md
